Update and rename citizenry.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Citizenry Enail Clone</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
         <table cellspacing="0" width="600px" align="center">
             <table cellspacing="0" width="600px" align="center">
                 <tr id="header">
-                    <td><img src="../assets/1.jpg"/></td>
+                    <td><img src="./assets/1.jpg"/></td>
                 </tr>
                 <tr class="subHead">
                     <td>Buttery-soft leather. Relaxed Linen. Discover our collection of wood-framed furniture designs, handcrafted with the best materials.</td>
@@ -20,11 +20,11 @@
             </table>
             <table cellspacing="0" width="600px" align="center">
                 <tr>
-                    <td class="Padding1"><img src="../assets/2.jpg" width="280px" /></td>
-                    <td class="Padding2"><img src="../assets/3.jpg" width="280px" /></td>
+                    <td class="Padding1"><img src="./assets/2.jpg" width="280px" /></td>
+                    <td class="Padding2"><img src="./assets/3.jpg" width="280px" /></td>
                 </tr>
                 <tr>
-                    <td class="tpPadding" colspan="2"><img src="../assets/4.jpg" width="575px" /></td>
+                    <td class="tpPadding" colspan="2"><img src="./assets/4.jpg" width="575px" /></td>
                 </tr>
                 <tr class="subHead">
                     <td colspan="2">Go on and kick-back and cozy-up in the <br/>
@@ -37,13 +37,13 @@
                     <td id="shopBtn"><a href="#shopBtn">shop all furniture</a></td>
                 </tr>
                 <tr>
-                    <td id="alcanena"><img src="../assets/5.jpeg" width="600px" /></td>
+                    <td id="alcanena"><img src="./assets/5.jpeg" width="600px" /></td>
                 </tr>
             </table>
             <table class="twoPart" cellspacing="0" width="600px" align="center">
                 <tr>
-                    <td class="alignLeft"><img src="../assets/6.png" width="285px" /></td>
-                    <td class="alignRight"><img src="../assets/7.png" width="285px" /></td>
+                    <td class="alignLeft"><img src="./assets/6.png" width="285px" /></td>
+                    <td class="alignRight"><img src="./assets/7.png" width="285px" /></td>
                 </tr>
                 <tr id="duoSpacing">
                     <td>Back in Stock ></td>
@@ -69,22 +69,22 @@
             </table>
             <table cellspacing="0" width="600px" align="center" >
                 <tr id="triImg">
-                    <td><img src="../assets/8-1.jpeg" width="199px" /></td>
-                    <td><img src="../assets/8-2.jpeg" width="199px" /></td>
-                    <td><img src="../assets/8-3.jpeg" width="199px" /></td>
+                    <td><img src="./assets/8-1.jpeg" width="199px" /></td>
+                    <td><img src="./assets/8-2.jpeg" width="199px" /></td>
+                    <td><img src="./assets/8-3.jpeg" width="199px" /></td>
                 </tr>
             </table>
             <table class="footer" cellspacing="0" cellpadding="10" width="600px" align="center">
                 <tr>
                     <td id="aligned" colspan="2">
-                        <img src="../assets/phone-icon.png" width="30px" /> <span>Get vip status: sign up for texts</span>
+                        <img src="./assets/phone-icon.png" width="30px" /> <span>Get vip status: sign up for texts</span>
                     </td>
                 </tr>
                 <tr>
                     <td class="socials">
-                        <img src="../assets/instagram.png" width="20px" />
-                        <img src="../assets/fb.png" width="20px" />
-                        <img src="../assets/pinterest.png" width="20px" />
+                        <img src="./assets/instagram.png" width="20px" />
+                        <img src="./assets/fb.png" width="20px" />
+                        <img src="./assets/pinterest.png" width="20px" />
                     </td>
                 </tr>
                 <tr>
